2004-04-14  Damon Chaplin  <damon@gnome.org>

	* links.html: checked all the links and tidied up.

	* lists.html: removed references to glade-announce. We don't use it
	any more.

2004-04-12  Damon Chaplin  <damon@gnome.org>

	* index.html: fixed date.

2004-04-11  Damon Chaplin  <damon@gnome.org>

	* apps.html: added GNOME-IOR.

2004-03-23  Damon Chaplin  <damon@gnome.org>

	* download.html:
	* history.html: 
	* index.html: announce 2.5.0.

2004-03-10  Damon Chaplin  <damon@gnome.org>

	* apps.html: added PHOEBE.

2004-03-04  Damon Chaplin  <damon@gnome.org>

	* apps.html: added DTraq.

	* index.html: updated Olivier Karquel's URL of the French info.

2004-02-26  Damon Chaplin  <damon@gnome.org>

	* apps.html: added Greyhounds, Bygfoot and BooleanMinimizer.

2004-01-26  Damon Chaplin  <damon@gnome.org>

	* index.html: added link to new Win32 port.
	removed Korea link since it isn't there any more.

2004-01-14  Damon Chaplin  <damon@gnome.org>

	* todo.html: merged in Paolo's stuff about Glade 3.

	* apps.html: added gbarco.

2003-12-04  Damon Chaplin  <damon@gnome.org>

	* apps.html: added Sonic Rainbow.

2003-11-26  Damon Chaplin  <damon@gnome.org>

	* download.html: set stable release to 2.0.1.

	* history.html: added 2.0.1 info.

2003-11-18  Damon Chaplin  <damon@gnome.org>

	* apps.html: added boardgametool and polyxmass.

2003-11-09  Damon Chaplin  <damon@gnome.org>

	* download.html: 
	* index.html: add stuff for 2.0.1 release.

	* apps.html: added configure-thinkpad.

	* lists.html: add link to glademm mailing list.

2003-10-22  Damon Chaplin  <damon@gnome.org>

	* FAQ: synced with version in Glade.

2003-07-18  Damon Chaplin  <damon@gnome.org>

	* apps.html: added Sussen.

	* index.html: added line to new tutorial.

2003-05-30  Damon Chaplin  <damon@gnome.org>

	* index.html: added link to new Spanish guide to Glade.

2003-05-12  Damon Chaplin  <damon@gnome.org>

	* index.html: updated links to Olivier Karquel's French docs.
	added link to new tutorial.
