@@ -87,7 +87,7 @@ Applications</a></b></font></td></tr></table></center>
 <center><hr></center>
 <font face="Arial,helvetica,geneva,sans-serif,lucida">
 <p>
-<font size=+1><b>Last Stable Version: 2.0.1</b></font><br>
+<font size=+1><b>Last Stable Version: 2.6.0</b></font><br>
 Versions newer than this may have problems, so use at your own risk!<br>
 
 <P>
@@ -111,10 +111,10 @@ set to 'Glade'.
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 <ul>
 
-<li><a href="http://ftp.gnome.org/pub/GNOME/sources/glade/2.5/">Glade 2.5.0 Tarball</a> (Mar 17 2004, 3.3 MB)<BR>
+<li><a href="http://ftp.gnome.org/pub/GNOME/sources/glade/2.6/">Glade 2.6.0 Tarball</a> (Apr 14 2004, 3.3 MB)<BR>
 <p>
-This is a beta release of Glade for GTK+ 2.4 and GNOME 2.6.
-Note that interfaces created with Glade 2.5.0 will need GTK+ 2.4/GNOME 2.6.
+This version of Glade is for GTK+ 2.4 and GNOME 2.6.
+Note that interfaces created with Glade 2.6.0 will need GTK+ 2.4 and GNOME 2.6.
 
 <li><a href="http://ftp.gnome.org/pub/GNOME/sources/glade/2.0/">Glade 2.0.1 Tarball</a> (Nov 7 2003, 3.0 MB)<BR>
 <p>
