@@ -99,6 +99,15 @@ Applications</a></b></font></td></tr></table></center>
 <ul type="square">
 
 
+<li><b>Version 2.6.0 (Apr 14 2004)</b>
+<ul>
+<li>Fixed trivial compilation problem in plain GTK+ version.
+<li>Fixed bug freeing unallocated memory on Win32.
+<li>Updated links to related software in README.
+</ul>
+</li><br>
+
+
 <li><b>Version 2.5.0 (Mar 17 2004)</b>
 <ul>
 <li>Added support for new widgets in GTK+ 2.4 - GtkExpander,
