@@ -158,6 +158,28 @@ Oct&nbsp;1&nbsp;2004
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
+Apr&nbsp;16&nbsp;2004
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>Glade 2.6.0 released !</B>
+<P>
+Get it at <a href="http://ftp.gnome.org/pub/GNOME/sources/glade/2.6/">
+http://ftp.gnome.org/pub/GNOME/sources/glade/2.6/</a>.
+
+<p>
+NOTE - you need GTK+ 2.4, and GNOME 2.6 if you want GNOME support.
+Also note that interfaces created with Glade 2.6 will need GTK+
+2.4/GNOME 2.6.
+So if you want your app to work on GTK+ 2.2/GNOME 2.4 platforms, stick
+with Glade 2.0.1.
+</font></td></tr>
+
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
 Mar&nbsp;23&nbsp;2004
 
 </b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
@@ -170,12 +192,6 @@ http://ftp.gnome.org/pub/GNOME/sources/glade/2.5/</a>.
 
 <p>
 This is the first beta release on the way towards 2.6.0.
-<p>
-NOTE - you need GTK+ 2.4, and GNOME 2.5.x if you want GNOME support.
-Also note that interfaces created with Glade 2.5.0 will need GTK+
-2.4/GNOME 2.6.
-So if you want your app to work on GTK+ 2.2/GNOME 2.4 platforms, stick
-with Glade 2.0.1.
 </font></td></tr>
 
 
