@@ -1,3 +1,9 @@
+2004-07-12  Damon Chaplin  <damon@gnome.org>
+
+	* index.html: 
+	* download.html: 
+	* history.html: added 2.6.0 info.
+
 2004-04-14  Damon Chaplin  <damon@gnome.org>
 
 	* links.html: checked all the links and tidied up.
